--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
     sdk: flutter
 
   json_annotation: ^4.7.0
+  http: ^0.13.5
 
 
   # The following adds the Cupertino Icons font to your application.
